--- a/style.css
+++ b/style.css
@@ -150,6 +150,12 @@ table {
 * {
 box-sizing: border-box
 }
+
+body{
+  font-family: "Lucida Grande", "Lucida Sans Unicode", Helvetica, Arial, Verdana, sans-serif;
+  font-weight: 400;
+  font-size: 12px;
+}
 /*
   ========================================
   Navigation Bar
@@ -161,9 +167,19 @@ box-sizing: border-box
   margin: 100px 250px 0px 250px;
   padding: 10px 50px;
   border-radius: 10px;
-  
+  align-items: center;
+ 
 }
 
+.navbar-elements li input {
+  border-radius: 10px;
+}
+
+#search-icon{
+  position: absolute;
+  padding: 2.5px 0 0 5px;
+
+}
 
 /*
   ========================================
