--- a/style.css
+++ b/style.css
@@ -155,7 +155,28 @@ body{
   font-family: "Lucida Grande", "Lucida Sans Unicode", Helvetica, Arial, Verdana, sans-serif;
   font-weight: 400;
   font-size: 12px;
+  background-color: green;
+  height: 100vh;
 }
+
+gen-grid {
+  display: grid;
+}
+
+main {
+}
+.combo {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 65% 15% 10%;
+}
+.top {
+  background-color: red;
+  height:100%;
+  /* position: absolute; */
+  top: 0;
+}
+
 /*
   ========================================
   Navigation Bar
@@ -168,21 +189,48 @@ body{
   padding: 10px 50px;
   border-radius: 10px;
   align-items: center;
- 
+
 }
 
 .navbar-elements li input {
   border-radius: 10px;
 }
 
-#search-icon{
+#search-icon {
   position: absolute;
   padding: 2.5px 0 0 5px;
-
 }
 
 /*
   ========================================
-  Main 
+  Main
   ========================================
 */
+
+.img-text {
+  width: 50%;
+  margin: 50px auto;
+}
+
+.img-text img {
+  width:100%
+}
+
+/*
+  ========================================
+  Other
+  ========================================
+*/
+
+.product-grid {
+  margin: 0;
+  margin-left: 5%
+  width: 100%;
+  height: 100%;
+  grid-template-columns: 1fr 1fr 1fr  1fr;
+  grid-gap:0px;
+}
+.product-grid img {
+  width: 23%;
+
+}
