--- a/style.css
+++ b/style.css
@@ -155,7 +155,6 @@ body{
   font-family: "Lucida Grande", "Lucida Sans Unicode", Helvetica, Arial, Verdana, sans-serif;
   font-weight: 400;
   font-size: 12px;
-  background-color: green;
   height: 100vh;
 }
 
@@ -163,29 +162,22 @@ gen-grid {
   display: grid;
 }
 
-main {
-}
-.combo {
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: 65% 15% 10%;
-}
-.top {
-  background-color: red;
-  height:100%;
-  /* position: absolute; */
-  top: 0;
-}
 
 /*
   ========================================
   Navigation Bar
   ========================================
 */
+nav{
+    width: 100%;
+    height: 210px;
+    justify-content: center;
+    align-items: center;
+}
 .navbar-elements {
   background: linear-gradient(0deg, rgba(34,193,195,1) 0%, rgb(202, 172, 172) 31%);
   justify-content: space-between;
-  margin: 100px 250px 0px 250px;
+  width: 63%;
   padding: 10px 50px;
   border-radius: 10px;
   align-items: center;
@@ -207,6 +199,11 @@ main {
   ========================================
 */
 
+
+main{
+ background-color: red;
+ 
+}
 .img-text {
   width: 50%;
   margin: 50px auto;
@@ -223,14 +220,12 @@ main {
 */
 
 .product-grid {
-  margin: 0;
-  margin-left: 5%
-  width: 100%;
-  height: 100%;
+  background-color: red;
   grid-template-columns: 1fr 1fr 1fr  1fr;
-  grid-gap:0px;
+
 }
 .product-grid img {
   width: 23%;
 
 }
+""
