--- a/style.css
+++ b/style.css
@@ -155,6 +155,7 @@ body{
   font-family: "Lucida Grande", "Lucida Sans Unicode", Helvetica, Arial, Verdana, sans-serif;
   font-weight: 400;
   font-size: 12px;
+  background-color: white;
   height: 100vh;
 }
 
@@ -162,22 +163,32 @@ gen-grid {
   display: grid;
 }
 
+main {
+}
+.combo {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 70% 30% 10%;
+}
+.top {
+  background-color: red;
+  background-image: url('img/background.jpg');
+  background-position:bottom;
+  height:100%;
+  /* position: absolute; */
+  top: 0;
+}
 
 /*
   ========================================
   Navigation Bar
   ========================================
 */
-nav{
-    width: 100%;
-    height: 210px;
-    justify-content: center;
-    align-items: center;
-}
 .navbar-elements {
-  background: linear-gradient(0deg, rgba(34,193,195,1) 0%, rgb(202, 172, 172) 31%);
+  /* background: linear-gradient(0deg, rgba(34,193,195,1) 0%, rgb(202, 172, 172) 31%); */
+  background-color: yellow;
   justify-content: space-between;
-  width: 63%;
+  margin: 75px 250px 0px 250px;
   padding: 10px 50px;
   border-radius: 10px;
   align-items: center;
@@ -199,14 +210,9 @@ nav{
   ========================================
 */
 
-
-main{
- background-color: red;
- 
-}
 .img-text {
   width: 50%;
-  margin: 50px auto;
+  margin: 50px auto 80px auto;
 }
 
 .img-text img {
@@ -220,12 +226,18 @@ main{
 */
 
 .product-grid {
-  background-color: red;
-  grid-template-columns: 1fr 1fr 1fr  1fr;
-
+  grid-template-columns: 1fr 1fr 1fr 1fr;
 }
 .product-grid img {
-  width: 23%;
-
+  width: 24.5%;
+  margin-left: 0.2%;
 }
-""
+
+.bottom-content {
+  margin: 0 auto;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 20px;
+  font-size: 10px;
+  color:#6e6e6e;
+}
