--- a/style.css
+++ b/style.css
@@ -144,7 +144,7 @@ table {
   ========================================
 */
 
-.d-flex{
+.d-flex { 
   display: flex;
 }
 * {
@@ -159,20 +159,18 @@ body{
   height: 100vh;
 }
 
-gen-grid {
+.gen-grid {
   display: grid;
 }
 
 main {
-}
-.combo {
-  display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: 70% 30% 10%;
 }
 .top {
   background-color: red;
-  background-image: url('img/background.jpg');
+  background: url('img/background.jpg') no-repeat;
+  background-size: cover;
   background-position:bottom;
   height:100%;
   /* position: absolute; */
@@ -185,15 +183,15 @@ main {
   ========================================
 */
 .navbar-elements {
-  background: linear-gradient(0deg, rgb(0, 0, 0) 0%, rgb(202, 172, 172) 31%,  rgb(133, 133, 133) 31% );
+  background: linear-gradient(0deg, rgba(144,139,139,1) 0%, rgba(51,48,48,1) 40%, rgba(51,48,48,1) 40%, rgba(154,144,144,1) 100%);
   justify-content: space-between;
   margin: 75px 250px 0px 250px;
   padding: 10px 50px;
   border-radius: 10px;
   align-items: center;
+  color: aliceblue;
 
 }
-
 .navbar-elements li input {
   border-radius: 10px;
 }
@@ -201,6 +199,7 @@ main {
 #search-icon {
   position: absolute;
   padding: 2.5px 0 0 5px;
+  color: #000 ;
 }
 
 /*
@@ -224,19 +223,19 @@ main {
   ========================================
 */
 
-.product-grid {
-  grid-template-columns: 1fr 1fr 1fr 1fr;
-}
 .product-grid img {
   width: 24.5%;
   margin-left: 0.2%;
 }
-
-.bottom-content {
+footer {
   margin: 0 auto;
-  display: grid;
   grid-template-columns: 1fr 1fr;
   grid-gap: 20px;
   font-size: 10px;
   color:#6e6e6e;
+  align-items: center;
+  
+}
+footer img{
+  width: 2%;
 }
