fixed linter css errors

--- a/style.css
+++ b/style.css
@@ -144,19 +144,8 @@ table {
   ========================================
 */
 
-.d-flex { 
+.d-flex {
   display: flex;
-}
-* {
-box-sizing: border-box
-}
-
-body{
-  font-family: "Lucida Grande", "Lucida Sans Unicode", Helvetica, Arial, Verdana, sans-serif;
-  font-weight: 400;
-  font-size: 12px;
-  background-color: white;
-  height: 100vh;
 }
 
 .gen-grid {
@@ -166,14 +155,18 @@ body{
 main {
   grid-template-columns: 1fr;
   grid-template-rows: 70% 30% 10%;
+  font-family: "Lucida Grande", "Lucida Sans Unicode", Helvetica, Arial, Verdana, sans-serif;
+  font-weight: 400;
+  font-size: 12px;
+  background-color: white;
+  height: 100vh;
 }
+
 .top {
-  background-color: red;
   background: url('img/background.jpg') no-repeat;
   background-size: cover;
-  background-position:bottom;
-  height:100%;
-  /* position: absolute; */
+  background-position: bottom;
+  height: 100%;
   top: 0;
 }
 
@@ -182,16 +175,17 @@ main {
   Navigation Bar
   ========================================
 */
+
 .navbar-elements {
-  background: linear-gradient(0deg, rgba(144,139,139,1) 0%, rgba(51,48,48,1) 40%, rgba(51,48,48,1) 40%, rgba(154,144,144,1) 100%);
+  background: linear-gradient(0deg, rgba(144, 139, 139, 1) 0%, rgba(51, 48, 48, 1) 40%, rgba(51, 48, 48, 1) 40%, rgba(154, 144, 144, 1) 100%);
   justify-content: space-between;
-  margin: 75px 250px 0px 250px;
+  margin: 75px 250px 0 250px;
   padding: 10px 50px;
   border-radius: 10px;
   align-items: center;
   color: aliceblue;
-
 }
+
 .navbar-elements li input {
   border-radius: 10px;
 }
@@ -199,7 +193,7 @@ main {
 #search-icon {
   position: absolute;
   padding: 2.5px 0 0 5px;
-  color: #000 ;
+  color: #000;
 }
 
 /*
@@ -213,8 +207,12 @@ main {
   margin: 50px auto 80px auto;
 }
 
+footer img {
+  width: 2%;
+}
+
 .img-text img {
-  width:100%
+  width: 100%;
 }
 
 /*
@@ -227,15 +225,12 @@ main {
   width: 24.5%;
   margin-left: 0.2%;
 }
+
 footer {
   margin: 0 auto;
   grid-template-columns: 1fr 1fr;
   grid-gap: 20px;
   font-size: 10px;
-  color:#6e6e6e;
+  color: #6e6e6e;
   align-items: center;
-  
-}
-footer img{
-  width: 2%;
 }
