--- a/style.css
+++ b/style.css
@@ -177,23 +177,41 @@ main {
 */
 
 .navbar-elements {
-  background: linear-gradient(0deg, rgba(144, 139, 139, 1) 0%, rgba(51, 48, 48, 1) 40%, rgba(51, 48, 48, 1) 40%, rgba(154, 144, 144, 1) 100%);
-  justify-content: space-between;
-  margin: 75px 250px 0 250px;
-  padding: 10px 50px;
+  width: 981px;
+  height: 35px;
+  margin: 90px auto 40px auto;
+  justify-content: space-around;
+  padding: 0 0 0 0;
   border-radius: 10px;
   align-items: center;
   color: aliceblue;
+  line-height: 18px;
+  font-family: Helvetica;
+  font-weight: 500;
+  font-size: 12px;
+  background: linear-gradient(#808285 9%,#797a7a 11%,#777777 13%,#757575 28%,#717171 35%,#717171 41%,#6e6e6e 43%,#6e6e6e 48%,#626262 50%,#616161 52%,#636363 70%,#666666 76%,#666666 89%,#727376 91%);
+}
+
+.fa-apple {
+  color: #dadadb;
+  font-size: 24px;
+}
+
+.navbar-elements li{
 }
 
 .navbar-elements li input {
   border-radius: 10px;
+  width: 109px;
+  height: auto;
+  background: linear-gradient(#838383, #707070  50%, #707070 52%, #757575 100%);
+  border: 1px solid #3e3e3e;
 }
 
 #search-icon {
   position: absolute;
-  padding: 2.5px 0 0 5px;
-  color: #000;
+  padding: 0.4% 0 0 5px;
+  color: white;
 }
 
 /*
@@ -226,11 +244,24 @@ footer img {
   margin-left: 0.2%;
 }
 
+
 footer {
   margin: 0 auto;
   grid-template-columns: 1fr 1fr;
-  grid-gap: 20px;
+  grid-template-rows: 30px 10px;
+  grid-row-gap: 0;
+  grid-column-gap: 100px;
   font-size: 10px;
   color: #6e6e6e;
-  align-items: center;
+}
+
+
+footer a{
+  color: #2d70d2;
+  text-decoration: none;
+
+}
+footer a:hover{
+  text-decoration: underline;
+
 }
