Fixed linter errors

--- a/style.css
+++ b/style.css
@@ -181,23 +181,19 @@ main {
   height: 35px;
   margin: 90px auto 40px auto;
   justify-content: space-around;
-  padding: 0 0 0 0;
   border-radius: 10px;
   align-items: center;
   color: aliceblue;
   line-height: 18px;
-  font-family: Helvetica;
+  font-family: Helvetica, sans-serif;
   font-weight: 500;
   font-size: 12px;
-  background: linear-gradient(#808285 9%,#797a7a 11%,#777777 13%,#757575 28%,#717171 35%,#717171 41%,#6e6e6e 43%,#6e6e6e 48%,#626262 50%,#616161 52%,#636363 70%,#666666 76%,#666666 89%,#727376 91%);
+  background: linear-gradient(#808285 9%, #797a7a 11%, #777 13%, #757575 28%, #717171 35%, #717171 41%, #6e6e6e 43%, #6e6e6e 48%, #626262 50%, #616161 52%, #636363 70%, #666 76%, #666 89%, #727376 91%);
 }
 
 .fa-apple {
   color: #dadadb;
   font-size: 24px;
-}
-
-.navbar-elements li{
 }
 
 .navbar-elements li input {
@@ -244,7 +240,6 @@ footer img {
   margin-left: 0.2%;
 }
 
-
 footer {
   margin: 0 auto;
   grid-template-columns: 1fr 1fr;
@@ -255,13 +250,11 @@ footer {
   color: #6e6e6e;
 }
 
-
-footer a{
+footer a {
   color: #2d70d2;
   text-decoration: none;
-
 }
-footer a:hover{
-  text-decoration: underline;
 
+footer a:hover {
+  text-decoration: underline;
 }
